--- a/client/package.json
+++ b/client/package.json
@@ -2,30 +2,33 @@
     "name": "squad",
     "version": "1.0.0",
     "private": true,
-    "main": "index.js",
+    "main": "index.jsx",
     "repository": "https://github.com/brkelley/squad",
     "author": "Brendan Kelley",
     "dependencies": {
-        "axios": "^0.18.0",
-        "moment": "^2.24.0",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-router-dom": "^5.0.0",
-        "webpack": "^4.39.1",
-        "webpack-cli": "^3.3.0",
         "@babel/core": "^7.4.3",
         "@babel/preset-env": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
+        "@fortawesome/fontawesome-free": "^5.9.0",
+        "axios": "^0.18.1",
         "babel-loader": "^8.0.5",
         "css-loader": "^2.1.1",
         "file-loader": "^4.1.0",
-        "sass-loader": "^7.1.0",
-        "style-loader": "^0.23.1",
-        "@fortawesome/fontawesome-free": "^5.9.0",
+        "history": "^4.10.1",
         "lodash": "^4.17.11",
+        "moment": "^2.24.0",
         "node-sass": "^4.11.0",
         "path": "^0.12.7",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
         "react-hot-loader": "^4.8.4",
+        "react-redux": "^7.1.1",
+        "react-router-dom": "^5.0.0",
+        "redux": "^4.0.4",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "webpack": "^4.39.1",
+        "webpack-cli": "^3.3.0",
         "webpack-dev-server": "^3.3.1"
     },
     "devDependencies": {
@@ -33,11 +36,20 @@
         "@fortawesome/free-brands-svg-icons": "^5.9.0",
         "@fortawesome/free-regular-svg-icons": "^5.9.0",
         "@fortawesome/free-solid-svg-icons": "^5.9.0",
-        "@fortawesome/react-fontawesome": "^0.1.4"
+        "@fortawesome/react-fontawesome": "^0.1.4",
+        "babel-eslint": "^10.0.3",
+        "eslint": "^6.4.0",
+        "eslint-config-airbnb": "^18.0.1",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-react": "^7.14.3",
+        "eslint-plugin-react-hooks": "^1.7.0",
+        "redux-thunk": "^2.3.0"
     },
     "scripts": {
         "start-dev": "webpack-dev-server --config ./webpack.config.js --mode=development --port 8080",
         "bundle": "webpack --mode=production --config webpack.production.config.js",
-        "prestart": "npm install && npm run bundle"
+        "prestart": "npm install && npm run bundle",
+        "lint": "eslint src --ext .js --ext .jsx"
     }
 }
