--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,15 @@
     "author": "Brendan Kelley",
     "dependencies": {
         "@babel/core": "^7.4.3",
-        "@babel/preset-env": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
         "@fortawesome/fontawesome-free": "^5.9.0",
+        "@material-ui/core": "^4.5.0",
         "axios": "^0.18.1",
         "babel-loader": "^8.0.5",
         "css-loader": "^2.1.1",
         "file-loader": "^4.1.0",
         "history": "^4.10.1",
+        "js-cookie": "^2.2.1",
         "lodash": "^4.17.11",
         "moment": "^2.24.0",
         "node-sass": "^4.11.0",
@@ -32,6 +33,9 @@
         "webpack-dev-server": "^3.3.1"
     },
     "devDependencies": {
+        "@babel/plugin-transform-runtime": "^7.6.2",
+        "@babel/preset-env": "^7.6.3",
+        "@babel/runtime": "^7.6.3",
         "@fortawesome/fontawesome-svg-core": "^1.2.19",
         "@fortawesome/free-brands-svg-icons": "^5.9.0",
         "@fortawesome/free-regular-svg-icons": "^5.9.0",
