--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,6 @@
         "js-cookie": "^2.2.1",
         "lodash": "^4.17.11",
         "moment": "^2.24.0",
-        "node-sass": "^4.11.0",
         "path": "^0.12.7",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
@@ -48,7 +47,8 @@
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.14.3",
         "eslint-plugin-react-hooks": "^1.7.0",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "sass": "^1.24.0"
     },
     "scripts": {
         "start-dev": "webpack-dev-server --config ./webpack.config.js --mode=development --port 8080",
