--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
         "express": "^4.17.0",
         "express-jwt": "^5.3.1",
         "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.15",
         "mongodb": "^3.2.6",
         "mongoose": "^5.5.12",
         "passport": "^0.4.0",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "sqlite-async": "^1.0.12",
+        "sqlite3": "^4.1.1",
+        "uuid": "^3.3.3"
     }
 }
