--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Server for squad",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon"
+        "start": "cd client && npm install && npm run bundle && cd .. && npm install && node index.js"
     },
     "author": "brkelley",
     "license": "ISC",
@@ -17,14 +17,11 @@
         "cors": "^2.8.5",
         "express": "^4.17.0",
         "express-jwt": "^5.3.1",
+        "firebase-admin": "^8.9.1",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
-        "mongodb": "^3.2.6",
-        "mongoose": "^5.5.12",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
-        "sqlite-async": "^1.0.12",
-        "sqlite3": "^4.1.1",
         "uuid": "^3.3.3"
     }
 }
