--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "cors": "^2.8.5",
         "express": "^4.17.0",
         "express-jwt": "^5.3.1",
-        "firebase-admin": "^8.9.1",
+        "firebase": "^7.7.0",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
         "passport": "^0.4.0",
