--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
         "babel-loader": "^8.0.5",
         "css-loader": "^2.1.1",
         "file-loader": "^4.1.0",
+        "firebase": "^7.8.0",
         "history": "^4.10.1",
         "js-cookie": "^2.2.1",
         "lodash": "^4.17.11",
