--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "express": "^4.17.0",
         "express-jwt": "^5.3.1",
         "firebase": "^7.7.0",
+        "firebase-admin": "^8.9.2",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
         "passport": "^0.4.1",
