--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 client/node_modules/
 node_modules/
+config.env
 database/firestore/firestore-config.json
 database/firestore/firestore-config-service-account.json
 database/firestore/firestore-script.js
