--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "axios": "^0.18.1",
         "babel-loader": "^8.0.5",
         "css-loader": "^2.1.1",
+        "dotenv": "^8.2.0",
         "file-loader": "^4.1.0",
         "firebase": "^7.8.0",
         "history": "^4.10.1",
