--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,11 +33,13 @@ jobs: # a collection of steps
     docker:
       - image: google/cloud-sdk
     steps:
-      - run: |
-          echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-          gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-          gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-          gcloud app deploy --promote
+      - checkout
+      - restore_cache: # special step to restore the dependency cache
+          # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+      - run:
+          name: deploy-cloud
+          command: gcloud app deploy --promote
 
 workflows:
   version: 2
