--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,10 @@ jobs: # a collection of steps
           echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
           gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
           gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+      - checkout # special step to check out source code to working directory
+      - run:
+          name: update-npm
+          command: 'sudo gcloud app deploy --promote'
 
 workflows:
   version: 2
