--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,11 +19,14 @@ jobs: # a collection of steps
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
+      - store_artifacts:
+        path: ./client/dist/
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
   deploy:
     docker:
       - image: google/cloud-sdk
     steps:
+      - checkout # special step to check out source code to working directory
       - run: |
           echo $GCLOUD_SERVICE_KEY | base64 --decode | gcloud auth activate-service-account --key-file=-
           gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
