--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,7 @@ jobs: # a collection of steps
           paths:
             - ./node_modules
       - store_artifacts:
-        path: /client/dist/index.html
-      - store_artifacts:
-        path: /client/dist/bundle.js
+          path: /client/dist
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
   deploy:
     docker:
