--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,14 @@ jobs: # a collection of steps
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
-      - store_artifacts:
-          path: client/dist
+      - persist_to_workspace:
+          root: client/dist
+          paths:
+            - index.html
+            - bundle.js
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
   deploy:
+    working_directory: ~/squad # directory where steps will run
     docker:
       - image: google/cloud-sdk
     steps:
