--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,12 @@ jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
     working_directory: ~/squad # directory where steps will run
     docker: # run the steps with Docker
-      - image: google/cloud-sdk # ...with this image as the primary container; this is where all `steps` will run
+      - image: circleci/node:10.16.3 # ...with this image as the primary container; this is where all `steps` will run
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
       - run:
           name: update-npm
-          command: 'npm install -g npm@latest'
+          command: 'sudo npm install -g npm@latest'
       - restore_cache: # special step to restore the dependency cache
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
           key: dependency-cache-{{ checksum "package-lock.json" }}
@@ -20,10 +20,18 @@ jobs: # a collection of steps
           paths:
             - ./node_modules
       - persist_to_workspace:
-          root: client/dist
+          root: /squad/client
           paths:
-            - index.html
-            - bundle.js
+            - dist
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+  deploy:
+    working_directory: ~/squad # directory where steps will run
+    docker:
+      - image: google/cloud-sdk
+    steps:
+      - checkout # special step to check out source code to working directory
+      - attach_workspace:
+          at: /squad/client
       - run: |
           echo $GCLOUD_SERVICE_KEY | base64 --decode | gcloud auth activate-service-account --key-file=-
           gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
@@ -37,3 +45,9 @@ workflows:
   build-deploy:
     jobs:
       - build
+      - deploy:
+          requires:
+            - build # Only deploy once the build job has completed
+          filters:
+            branches:
+              only: master # Only deploy on the master branch
