--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,11 @@ jobs: # a collection of steps
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
-          name: install-npm-packages
-          command: npm install && cd ./client && npm install && npm run bundle -- --env.FIREBASE_CONFIG_SERVICE_ACCOUNT=${FIREBASE_CONFIG_SERVICE_ACCOUNT} --env.FIREBASE_CONFIG=${FIREBASE_CONFIG} && cd ..
+          name: install-server-npm
+          command: npm install
+      - run:
+          name: install-client-npm
+          command: cd ./client && npm install && npm run bundle -- --env.PORT=4444 --env.FIREBASE_CONFIG_SERVICE_ACCOUNT=${FIREBASE_CONFIG_SERVICE_ACCOUNT} --env.FIREBASE_CONFIG=${FIREBASE_CONFIG} && cd ..
       - save_cache: # special step to save the dependency cache
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
