--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,15 +17,12 @@ jobs: # a collection of steps
           command: npm install
       - run:
           name: install-client-npm
-          command: cd ./client && npm install && npm run bundle -- --env.PORT=4444 --env.FIREBASE_CONFIG_SERVICE_ACCOUNT=${FIREBASE_CONFIG_SERVICE_ACCOUNT} --env.FIREBASE_CONFIG=${FIREBASE_CONFIG} && cd ..
+          command: npm install --prefix client
       - save_cache: # special step to save the dependency cache
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
-      - persist_to_workspace:
-          root: client
-          paths:
-            - dist
+            - ./client/node_modules
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
   deploy:
     working_directory: ~/squad # directory where steps will run
@@ -33,8 +30,9 @@ jobs: # a collection of steps
       - image: google/cloud-sdk
     steps:
       - checkout # special step to check out source code to working directory
-      - attach_workspace:
-          at: client
+      - run:
+          name: bundle-client
+          command: npm run client
       - run: |
           echo $GCLOUD_SERVICE_KEY | base64 --decode | gcloud auth activate-service-account --key-file=-
           gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
