--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,9 @@ jobs: # a collection of steps
       - image: google/cloud-sdk
     steps:
       - checkout # special step to check out source code to working directory
+      - node/with-cache:
+          steps:
+            - run: npm install
       - run:
           name: bundle-client
           command: npm run client
