--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "client": "npm start --prefix client"
+        "client": "npm start --prefix client",
+        "create-env": "printenv > config.env"
     },
     "author": "brkelley",
     "license": "ISC",
