--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,13 @@
         "react"
     ],
     "rules": {
+        "one-var": [0],
+        "one-var-declaration-per-line": [0],
+        "react/prop-types": [0],
+        "react/jsx-indent-props": [2, 4],
+        "object-curly-newline": [0],
         "space-before-function-paren": ["error", "always"],
+        "semi": ["error", "always"],
         "indent": ["error", 4, { "SwitchCase": 1 }],
         "react/jsx-indent": ["error", 4],
         "comma-dangle": ["error", "never"],
