--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "author": "brkelley",
     "license": "ISC",
     "devDependencies": {
+        "babel-eslint": "^10.0.3",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb": "^18.0.1",
+        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-react": "^7.18.3",
         "nodemon": "^1.19.4"
     },
     "dependencies": {
