--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,9 @@
     "rules": {
         "one-var": [0],
         "one-var-declaration-per-line": [0],
+        "no-plusplus": [0],
+        "no-case-declarations": [0],
+        "jsx-a11y/alt-text": [0],
         "react/prop-types": [0],
         "react/jsx-indent-props": [2, 4],
         "object-curly-newline": [0],
