--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
         "react-redux": "^7.1.1",
         "react-router-dom": "^5.0.0",
         "redux": "^4.0.4",
+        "reduxsauce": "^1.1.2",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
         "webpack": "^4.39.1",
