--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,11 +22,13 @@
         "react"
     ],
     "rules": {
+        "jsx-a11y/click-events-have-key-events": [0],
+        "jsx-a11y/no-static-element-interactions": [0],
+        "jsx-a11y/alt-text": [0],
         "one-var": [0],
         "one-var-declaration-per-line": [0],
         "no-plusplus": [0],
         "no-case-declarations": [0],
-        "jsx-a11y/alt-text": [0],
         "react/prop-types": [0],
         "react/jsx-indent-props": [2, 4],
         "object-curly-newline": [0],
