--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "jsx-a11y/no-static-element-interactions": [0],
         "jsx-a11y/alt-text": [0],
         "jsx-a11y/control-has-associated-label": [0],
+        "no-await-in-loop": [0],
         "no-param-reassign": [0],
         "one-var": [0],
         "one-var-declaration-per-line": [0],
