--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
+        "start-server:dev": "nodemon --ignore client/",
+        "start-client:dev": "npm run start-dev --prefix client",
         "client": "npm start --prefix client",
         "create-env": "printenv > config.env"
     },
