--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,11 @@
         "es6": true
     },
     "extends": [
-        "airbnb"
+        "airbnb",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier/@typescript-eslint",
+        "plugin:prettier/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -14,13 +18,18 @@
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 2018,
+        "ecmaVersion": 2020,
         "sourceType": "module"
     },
-    "parser": "babel-eslint",
+    "parser": "@typescript-eslint/parser",
     "plugins": [
         "react"
     ],
+    "settings": {
+        "react": {
+            "version": "detect" // Tells eslint-plugin-react to automatically detect the version of React to use
+        }
+    },
     "rules": {
         "jsx-a11y/click-events-have-key-events": [0],
         "jsx-a11y/no-static-element-interactions": [0],
@@ -34,7 +43,7 @@
         "no-case-declarations": [0],
         "react/prop-types": [0],
         "react/jsx-indent-props": [2, 4],
-        "jsx-closing-bracket-location": [
+        "react/jsx-closing-bracket-location": [
             1,
             {
                 "nonEmpty": "after-props",
