--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,10 @@
     "dependencies": {
         "@babel/core": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
-        "@fortawesome/fontawesome-svg-core": "^1.2.26",
         "@fortawesome/free-brands-svg-icons": "^5.12.0",
         "@fortawesome/free-regular-svg-icons": "^5.12.0",
-        "@fortawesome/free-solid-svg-icons": "^5.12.0",
-        "@fortawesome/react-fontawesome": "^0.1.8",
+        "@fortawesome/free-solid-svg-icons": "^5.13.0",
+        "@fortawesome/react-fontawesome": "^0.1.9",
         "@material-ui/core": "^4.5.0",
         "axios": "^0.18.1",
         "babel-loader": "^8.0.5",
@@ -41,14 +40,27 @@
         "@babel/plugin-transform-runtime": "^7.6.2",
         "@babel/preset-env": "^7.6.3",
         "@babel/runtime": "^7.6.3",
+        "@fortawesome/fontawesome-svg-core": "^1.2.28",
+        "@types/jest": "^25.2.1",
+        "@types/node": "^13.13.5",
+        "@types/react": "^16.9.34",
+        "@types/react-dom": "^16.9.7",
+        "@types/react-router-dom": "^5.1.5",
+        "@typescript-eslint/eslint-plugin": "^2.31.0",
+        "@typescript-eslint/parser": "^2.31.0",
         "babel-eslint": "^10.0.3",
         "eslint": "^6.4.0",
         "eslint-config-airbnb": "^18.0.1",
+        "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.18.3",
         "eslint-plugin-react-hooks": "^1.7.0",
         "redux-thunk": "^2.3.0",
-        "sass": "^1.24.0"
+        "sass": "^1.24.0",
+        "source-map-loader": "^0.2.4",
+        "ts-loader": "^7.0.2",
+        "typescript": "^3.8.3"
     },
     "scripts": {
         "start": "webpack --mode=production --config webpack.production.config.js",
