--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "brkelley",
     "license": "ISC",
     "devDependencies": {
+        "@types/lodash": "^4.14.150",
         "babel-eslint": "^10.0.3",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.0.1",
