--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,13 @@
         "@fortawesome/free-regular-svg-icons": "^5.13.0",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
-        "@material-ui/core": "^4.5.0",
         "axios": "^0.18.1",
         "babel-loader": "^8.0.5",
         "css-loader": "^2.1.1",
-        "dotenv": "^8.2.0",
         "file-loader": "^4.1.0",
-        "firebase": "^7.8.0",
         "history": "^4.10.1",
         "js-cookie": "^2.2.1",
-        "lodash": "^4.17.11",
+        "lodash": "^4.17.20",
         "moment": "^2.24.0",
         "path": "^0.12.7",
         "react": "^16.8.6",
@@ -31,14 +28,15 @@
         "react-redux": "^7.1.1",
         "react-router-dom": "^5.0.0",
         "redux": "^4.0.4",
-        "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1"
     },
     "devDependencies": {
         "@babel/plugin-transform-runtime": "^7.6.2",
         "@babel/preset-env": "^7.6.3",
         "@babel/runtime": "^7.6.3",
+        "@material-ui/core": "^4.11.0",
         "@types/jest": "^25.2.1",
+        "@types/material-ui": "^0.21.8",
         "@types/node": "^13.13.5",
         "@types/react": "^16.9.34",
         "@types/react-dom": "^16.9.7",
@@ -54,7 +52,8 @@
         "eslint-plugin-react": "^7.18.3",
         "eslint-plugin-react-hooks": "^1.7.0",
         "redux-thunk": "^2.3.0",
-        "sass": "^1.24.0",
+        "sass": "^1.26.10",
+        "sass-loader": "^10.0.2",
         "source-map-loader": "^0.2.4",
         "ts-loader": "^7.0.2",
         "typescript": "^3.8.3",
