--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.18.3",
+        "moment": "^2.27.0",
         "nodemon": "^2.0.3"
     },
     "dependencies": {
