--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.18.3",
-        "moment": "^2.27.0",
         "nodemon": "^2.0.3"
     },
     "dependencies": {
@@ -38,6 +37,7 @@
         "lodash": "^4.17.19",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "uuid": "^3.4.0"
+        "uuid": "^3.4.0",
+        "moment": "^2.27.0"
     }
 }
