--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,9 +3,9 @@ substitutions:
 
 timeout: 1000s
 steps:
-- name: node:10.15.1
-  entrypoint: npm
-  args: ["run", "create-env"]
+- name: 'gcr.io/cloud-builders/gcloud'
+  entrypoint: 'bash'
+  args: ["printenv > config.env"]
   env:
     - 'FIREBASE_CONFIG_SERVICE_ACCOUNT=${_FIREBASE_CONFIG_SERVICE_ACCOUNT}'
     - 'FIREBASE_CONFIG_CLIENT=${_FIREBASE_CONFIG_CLIENT}'
