--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,10 @@ timeout: 1000s
 steps:
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
-  args: ["printenv", ">", "config.env"]
+  args:
+    - 'printenv'
+    - '>'
+    - 'config.env'
   env:
     - 'FIREBASE_CONFIG_SERVICE_ACCOUNT=${_FIREBASE_CONFIG_SERVICE_ACCOUNT}'
     - 'FIREBASE_CONFIG_CLIENT=${_FIREBASE_CONFIG_CLIENT}'
