--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
         "@fortawesome/free-regular-svg-icons": "^5.13.0",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
+        "@types/lodash": "^4.14.168",
         "axios": "^0.21.1",
         "babel-loader": "^8.0.5",
         "css-loader": "^2.1.1",
         "dotenv": "^8.2.0",
         "file-loader": "^4.1.0",
+        "firebase": "^8.4.3",
         "history": "^4.10.1",
         "js-cookie": "^2.2.1",
         "lodash": "^4.17.20",
