Updated cloudbuild file

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,6 +6,9 @@ steps:
 - name: gcr.io/cloud-builders/gcloud
   entrypoint: /bin/bash
   args: ['-c', 'printenv > config.env']
+  env:
+  - 'FIREBASE_CONFIG_CLIENT=_FIREBASE_CONFIG_CLIENT'
+  - 'FIREBASE_CONFIG_SERVICE_ACCOUNT=_FIREBASE_CONFIG_SERVICE_ACCOUNT'
 - name: golang
   args: ['go', 'build', '.']
 - name: node
